Fixing text overflow

--- a/Congress/style.css
+++ b/Congress/style.css
@@ -12,6 +12,7 @@
     display: flex;
     flex-direction: column;
     background-color: gray;
+    width: 200px;
     margin: 10px;
     border-radius: 5px;
 }
@@ -19,5 +20,14 @@
     font-family: poppins;
     font-size: 1.2rem;
     font-weight: 400;
-    margin: 0px;
+    margin-left: 1rem;
+    overflow-wrap: break-word;
+}
+.cardParty {
+    font-family: poppins;
+    font-size: 1.2rem;
+    font-weight: 400;
+    margin-left: 1rem;
+    margin-bottom: 0px;
+    overflow-wrap: break-word; 
 }
